Building a walking skeleton of Angular continue part 5

--- a/client/angular.json
+++ b/client/angular.json
@@ -23,6 +23,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -66,7 +68,10 @@
             "production": {
               "browserTarget": "client:build:production"
             },
-            "development": {
+            "development": {              
+              "sslKey": "./ssl/localhost-key.pem",
+              "sslCert": "./ssl/localhost.pem",
+              "ssl": true,
               "browserTarget": "client:build:development"
             }
           },
