Creating a User DTO and returning the token in Asp.Net Core Part 11

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,5 +10,7 @@
     "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=DatingAppDB;Integrated Security=True;Trust Server Certificate=True"
   },
 
+  "TokenKey": "Hii this is a super long and secure jwt key with at least 64 chars!!",
+
   "AllowedHosts": "*"
 }
