--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "bootswatch": "^5.3.7",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-gallery-9": "^1.0.6",
+    "ngx-spinner": "^11.0.1",
     "ngx-toastr": "^14.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
