Cloudinary Configuring in the API in Asp.Net Core part 63

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
 
+  "CloudinarySettings": {
+    "CloudName": "dfkpxznuh",
+    "ApiKey": "427369674163144",
+    "ApiSecret": "POicZz7mFBwNdrsphFbT5_0JhA8"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=DatingAppDB;Integrated Security=True;Trust Server Certificate=True"
   },
