--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.3.7",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.2",
     "ngx-gallery-9": "^1.0.6",
     "ngx-spinner": "^11.0.1",
