--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "ngx-bootstrap": "^7.1.2",
     "ngx-gallery-9": "^1.0.6",
     "ngx-spinner": "^11.0.1",
+    "ngx-timeago": "^1.0.4",
     "ngx-toastr": "^14.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
